fix merge errors

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -189,6 +189,14 @@
     <Compile Include="Migrations\201407111234255_InitialCreate.Designer.cs">
       <DependentUpon>201407111234255_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201407151400345_AddLike.cs" />
+    <Compile Include="Migrations\201407151400345_AddLike.Designer.cs">
+      <DependentUpon>201407151400345_AddLike.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201407161046277_ChangeLikesStorage.cs" />
+    <Compile Include="Migrations\201407161046277_ChangeLikesStorage.Designer.cs">
+      <DependentUpon>201407161046277_ChangeLikesStorage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\CourseManager_should.cs" />
     <EmbeddedResource Include="Courses\**\*.*">
       <Visible>false</Visible>
@@ -225,6 +233,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CourseManager.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\Like.cs" />
     <Compile Include="Models\Roles.cs" />
     <Compile Include="Models\RunSolutionResult.cs" />
     <Compile Include="Models\SlideViewModel.cs" />
@@ -235,6 +244,12 @@
     <Compile Include="Startup.cs" />
     <EmbeddedResource Include="Migrations\201407111234255_InitialCreate.resx">
       <DependentUpon>201407111234255_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201407151400345_AddLike.resx">
+      <DependentUpon>201407151400345_AddLike.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201407161046277_ChangeLikesStorage.resx">
+      <DependentUpon>201407161046277_ChangeLikesStorage.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -570,6 +585,7 @@
     <Content Include="Views\Course\_ExerciseHints.cshtml" />
     <Content Include="Views\Course\_SlideNavigation.cshtml" />
     <Content Include="Views\Course\_Sidebar.cshtml" />
+    <Content Include="Views\Course\AcceptedSolutions.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
