--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -184,10 +184,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AnalyticsController.cs" />
-    <Compile Include="DataContexts\AnalyticsTableRepo.cs" />
+    <Compile Include="DataContexts\SlideHintRepo.cs" />
+    <Compile Include="DataContexts\SlideRateRepo.cs" />
     <Compile Include="DataContexts\UserQuestionsRepo.cs" />
     <Compile Include="DataContexts\UserSolutionsRepo_should.cs" />
     <Compile Include="DataContexts\UserSolutionsRepo.cs" />
+    <Compile Include="DataContexts\VisitersRepo.cs" />
     <Compile Include="Ideone\ExecutionService.Credentials.cs" />
     <Compile Include="Migrations\201407111234255_InitialCreate.cs" />
     <Compile Include="Migrations\201407111234255_InitialCreate.Designer.cs">
@@ -201,15 +203,10 @@
     <Compile Include="Migrations\201407180807286_AddQuestions.Designer.cs">
       <DependentUpon>201407180807286_AddQuestions.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201407210712401_AddAnalyticsTable.cs" />
-    <Compile Include="Migrations\201407210712401_AddAnalyticsTable.Designer.cs">
-      <DependentUpon>201407210712401_AddAnalyticsTable.cs</DependentUpon>
+    <Compile Include="Migrations\201407261530409_NewAnalytics.cs" />
+    <Compile Include="Migrations\201407261530409_NewAnalytics.Designer.cs">
+      <DependentUpon>201407261530409_NewAnalytics.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201407220815589_AddHints.cs" />
-    <Compile Include="Migrations\201407220815589_AddHints.Designer.cs">
-      <DependentUpon>201407220815589_AddHints.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Models\AnalyticsTable.cs" />
     <Compile Include="Models\CourseManager_should.cs" />
     <EmbeddedResource Include="Courses\**\*.*">
       <Visible>false</Visible>
@@ -246,16 +243,15 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CourseManager.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
-    <Compile Include="Models\Hint.cs" />
-    <Compile Include="Models\SlideMark.cs" />
-    <Compile Include="Models\Solver.cs" />
+    <Compile Include="Models\SlideHint.cs" />
+    <Compile Include="Models\SlideRate.cs" />
     <Compile Include="Models\UserQuestion.cs" />
     <Compile Include="Models\Like.cs" />
     <Compile Include="Models\Roles.cs" />
     <Compile Include="Models\RunSolutionResult.cs" />
     <Compile Include="Models\SlideViewModel.cs" />
     <Compile Include="Models\UserSolution.cs" />
-    <Compile Include="Models\Visiter.cs" />
+    <Compile Include="Models\Visiters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ideone\ExecutionService.cs" />
     <Compile Include="Service References\Ideone_Service_v1Service.cs" />
@@ -269,11 +265,8 @@
     <EmbeddedResource Include="Migrations\201407180807286_AddQuestions.resx">
       <DependentUpon>201407180807286_AddQuestions.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201407210712401_AddAnalyticsTable.resx">
-      <DependentUpon>201407210712401_AddAnalyticsTable.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201407220815589_AddHints.resx">
-      <DependentUpon>201407220815589_AddHints.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201407261530409_NewAnalytics.resx">
+      <DependentUpon>201407261530409_NewAnalytics.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -671,7 +664,7 @@
     <Content Include="Views\Course\AcceptedSolutions.cshtml" />
     <Content Include="Views\Course\_AskBar.cshtml" />
     <Content Include="Views\Analytics\TableAnalytics.cshtml" />
-    <Content Include="Views\Course\_MarksBar.cshtml" />
+    <Content Include="Views\Course\_RatesBar.cshtml" />
     <Content Include="tablesorter-master\changelog" />
     <Content Include="tablesorter-master\docs\.tmp_index.html.55071~" />
     <Content Include="tablesorter-master\LICENSE" />
