added SlideAttribute, rates in statistics

--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -78,7 +78,6 @@
     <Compile Include="ExerciseAttribute.cs" />
     <Compile Include="ExerciseSlide.cs" />
     <Compile Include="ExpectedOutput.cs" />
-    <Compile Include="IdAttribute.cs" />
     <Compile Include="PersonalStatisticPageModel.cs" />
     <Compile Include="SlideInfo.cs" />
     <Compile Include="Markdown_investigation.cs" />
@@ -145,7 +144,7 @@
     <Compile Include="tests\SingleComment.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
-    <Compile Include="TitleAttribute.cs" />
+    <Compile Include="SlideAttribute.cs" />
     <Compile Include="Urls.cs" />
     <Compile Include="UsersStatsPageModel.cs" />
   </ItemGroup>
