--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -72,6 +72,7 @@
     <Compile Include="AcceptedSolutionInfo.cs" />
     <Compile Include="AcceptedSolutionsPageModel.cs" />
     <Compile Include="AnalyticsTableInfo.cs" />
+    <Compile Include="BaseSlideTests.cs" />
     <Compile Include="Course.cs" />
     <Compile Include="CoursePageModel.cs" />
     <Compile Include="CSharp\SlideWalker.cs" />
@@ -94,7 +95,6 @@
     <Compile Include="StringExtensions.cs" />
     <Compile Include="StringExtensions_SplitToLines_should.cs" />
     <Compile Include="CSharp\SyntaxExtensions.cs" />
-    <Compile Include="SlideTestsUtils.cs" />
     <Compile Include="AnalyticsTablePageModel.cs" />
     <Compile Include="tests\Includes.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
