--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -33,6 +33,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="NLog" version="3.1.0.0" targetFramework="net45" />
+  <package id="NLog.Config" version="3.1.0.0" targetFramework="net45" />
+  <package id="NLog.Schema" version="3.1.0.0" targetFramework="net45" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
