--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -80,6 +80,10 @@
     <Compile Include="ExerciseSlide.cs" />
     <Compile Include="ExpectedOutput.cs" />
     <Compile Include="PersonalStatisticPageModel.cs" />
+    <Compile Include="Quiz.cs" />
+    <Compile Include="QuizSlide.cs" />
+    <Compile Include="QuizBlock.cs" />
+    <Compile Include="QuizTask.cs" />
     <Compile Include="SlideInfo.cs" />
     <Compile Include="Markdown_investigation.cs" />
     <Compile Include="Md.cs" />
